my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ESAVEDCONST/T_ESAVEDCONST-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_ESAVEDCONST_STRUCT_H
#define T_ESAVEDCONST_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_ESAVEDCONST(void);


#endif /* not T_ESAVEDCONST_STRUCT_H */
